Fix horizontal scrolling too

--- a/src/editor/app.css
+++ b/src/editor/app.css
@@ -1,6 +1,7 @@
 body {
   height: 100vh;
   margin: 0;
+  overscroll-behavior: none;
 }
 
 #root {
